added appointment controller